--- a/install/etc/php7/php-fpm.conf
+++ b/install/etc/php7/php-fpm.conf
@@ -2,9 +2,9 @@ error_log = /www/logs/php-fpm/php-fpm.log
 log_level = <PHP_LOG_LEVEL>
 
 [www]
-;user = www-data
-;group = www-data
-listen = 127.0.0.1:9000
+user = www-data
+group = www-data
+listen = 0.0.0.0:9000
 listen.owner = www-data
 listen.group = www-data
 pm = ondemand
