--- a/install/etc/php7/php-fpm.conf
+++ b/install/etc/php7/php-fpm.conf
@@ -16,7 +16,7 @@ ping.path = /ping
 
 pm.process_idle_timeout = 10s
 pm.max_requests = 500
-;chdir = /www/html
+chdir = /www/html
 php_flag[display_errors] = on
 php_admin_value[memory_limit] = <PHP_MEMORY_LIMIT>
 php_admin_value[post_max_size] = <UPLOAD_MAX_SIZE>
